Thu Jun  5 12:52:18 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* man/ruby.1: remove rubyforge entry.

Thu Jun  5 12:45:32 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* misc/README: use github link instead of rubyforge.

Thu Jun  5 10:03:29 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c (obj_free): check also FL_PROMOTED bit by RVALUE_OLD_P().

Thu Jun  5 03:45:28 2014  Eric Wong  <e@80x24.org>

	* configure.in: add --with-jemalloc option
	  [ruby-core:62912]

Wed Jun  4 22:28:14 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c: introduce RZombie to manage zombie objects.
	  Rewrite finalizing logics with this type.

	* gc.c (gc_verify_internal_consistency): verify zombie (finalizing)
	  objects count.

Wed Jun  4 22:09:53 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* re.c (match_aref, rb_reg_regsub): consider encoding of captured
	  names, encoding-incompatible should not match.
	  [ruby-dev:48278] [Bug #9903]

Wed Jun  4 21:23:52 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* re.c (match_aref): should not ignore name after NUL byte.
	  [ruby-dev:48275] [Bug #9902]

Wed Jun  4 04:08:37 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (core_hash_merge_kwd): should return the result hash, which
	  may be converted from and differ from the given argument.
	  [ruby-core:62921] [Bug #9898]

Tue Jun  3 23:32:34 2014  Tanaka Akira  <akr@fsij.org>

	* ruby.c (load_file_internal2): Extracted from load_file_internal.
	  (load_file_internal): Invoke load_file_internal2 using rb_protect.
	  Close an opened FD if load_file_internal2 raises an exception.

Tue Jun  3 19:11:45 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rb_objspace_free): should not rest_sweep() here.
	  Some data structures are already freed.

Tue Jun  3 18:43:51 2014  Koichi Sasada  <ko1@atdot.net>

	* test/ruby/test_gc.rb: allocate more objects to invoke GC by newobj.
	  GC allows extending pages depends on heap_increment.

Tue Jun  3 18:01:27 2014  Koichi Sasada  <ko1@atdot.net>
